<resources>
    <string name="app_name_ar">رفيق المسلم</string>
    <string name="app_name_en">Muslim Buddy</string>
    <string name="title_home">اليوم</string>
    <string name="title_dhikr">الاذكار اليومية</string>
    <string name="title_prayers">توقيت الصلاة</string>
    <string name="title_qibla">القبلة</string>
    <string name="title_today">Today</string>
    <string name="title_quran">القران الكريم</string>
    <string name="title_image_home">A Busy Life makes Prayer Harder, But Prayer makes a Busy Life Easier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_adhkar">Adhkar</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_more">More</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_display_list_view">DisplayListViewActivity</string>
    <string name="title_activity_list_view_item">ListViewItemActivity</string>
    <string name="header_alt">Header image</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_display_prayers_timings">aclabel_support_urltivity_display_prayers_timings</string>
    <string name="GPS_category">GPS</string>
    <string name="manual_entry_category">MANUAL DETECTION</string>
    <string name="auto_detect_title">Auto Detect Location</string>
    <string name="auto_detect_summary">Set to On to automatically detect current location</string>
    <string name="manual_entry_city_title">Current City</string>
    <string name="manual_entry_city_summary">no selection</string>
    <string name="manual_entry_city_dialog">Enter your City</string>
    <string name="manual_entry_country_title">Current Country</string>
    <string name="manual_entry_country_summary">no selection</string>
    <string name="manual_entry_country_dialog">Enter your Country</string>
    <string name="calculation_method_category">PRAYER TIMES OPTIONS</string>
    <string name="calculation_method_title">Calculation Method</string>
    <string name="calculation_method_summary">no selection</string>
    <string name="support_category">SUPPORT</string>
    <string name="support_title">Terms and Conditios</string>
    <string name="support_summary">read our privacy policy</string>
    <string name="support_url">https://www.freeprivacypolicy.com/privacy/view/c289dc2a4c0173e8641e21370821269c</string>
    <string name="text_view_local">Local</string>
    <string name="text_view_fajr">Fajr</string>
    <string name="text_view_fajr_time">Time</string>
    <string name="text_view_sunrise">Sunrise</string>
    <string name="text_view_sunrise_time">Time</string>
    <string name="text_view_duhr">Duhr</string>
    <string name="text_view_duhr_time">Time</string>
    <string name="text_view_asr">Asr</string>
    <string name="text_view_asr_time">Time</string>
    <string name="text_view_maghrib">Maghrib</string>
    <string name="text_view_magrib_time">Time</string>
    <string name="text_view_isha">Isha</string>
    <string name="text_view_isha_time">Time</string>
    <string name="prayer_notification_category">NOTIFICATIONS</string>
    <string name="fajr_notification">Fajr</string>
    <string name="sunrise_notification">Sunrise</string>
    <string name="dhuhr_notification">Dhuhr</string>
    <string name="asr_notification">Asr</string>
    <string name="maghrib_notification">Magrib</string>
    <string name="isha_notification">Isha</string>
    <string name="morning_azkar_notification">Morning Azkar</string>
    <string name="evening_azkar_notification">Evening Azkar</string>
    <string name="gps_location_access_required">GPS Location access permission is required to display the daily prayer times and for Qibla direction.</string>
    <string name="ok">Ok</string>
    <string name="gps_location_permission_not_available">Permission is not available. Requesting GPS Location access permission.</string>
    <string name="gps_location_permission_available">GPS Location access permission is available. Fetching daily prayer times.</string>
    <string name="gps_location_permission_granted">GPS Location access permission was granted. Fetching daily prayer times.</string>
    <string name="gps_location_permission_denied">GPS Location access permission request was denied.</string>
    <string name="gps_location_unavailable"><b>Can not fetch prayer times.</b>\nEnable GPS Location access permission from your phone.</string>
    <string name="display_makkah_live_title">جاري تحميل البث الحي من الحرم الشريف</string>
    <string name="display_medina_live_title">جاري تحميل البث الحي من المسجد النبوي</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="title_activity_quran_radio_live">Quran Live Radio</string>
    <string name="display_quran_radio_live_title">جاري تحميل البث الحي القران الكريم</string>
    <string name="athan_sound_category">SOUNDS</string>
    <string name="fajr_athan_sound">Fajr Athan</string>
    <string name="sunrise_athan_sound">Sunrise Athan</string>
    <string name="dhuhr_athan_sound">Dhuhr Athan</string>
    <string name="asr_athan_sound">Asr Athan</string>
    <string name="maghrib_athan_sound">Maghrib Athan</string>
    <string name="isha_athan_sound">Isha Athan</string>
    <string name="home_content_image_description">home_content_image_description</string>
    <string name="error_auto_detect_prayers">Unable to Fetch Daily Prayer times. Please make sure you select Calculation Method if Auto Detect Location switch under Settings menu is set to ON and to enable GPS Access Location permission from your phone and the internet connection."</string>
    <string name="error_manual_detect_prayers">Unable to Fetch Daily Prayer times. Please make sure you enter: Current City, Current Country and select Calculation Method if Auto Detect Location switch under Settings menu is set to OFF and to enable internet connection.</string>
    <string name="error_no_results_found_retrofit">Unable to Fetch Daily Prayer times. Please check your internet connection.</string>
</resources>
